--- a/BaltimoreRavensPlot.ipynb
+++ b/BaltimoreRavensPlot.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let is plot the results"
+    "Plot the results"
    ]
   },
   {
